tests/ui/attributes/inline-attribute-enum-variant-error.stderr
error[E0518]: attribute should be applied to function or closure
  --> $DIR/inline-attribute-enum-variant-error.rs:4:5
   |
LL |     #[inline]
   |     ^^^^^^^^^
LL |
LL |     Variant,
   |     ------- not a function or closure

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0518`.
